pi4-cluster/ingress-system/traefik/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-external
  namespace: ingress-system
  labels:
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`traefik.milton.mcf.io`) && PathPrefix(`/`)
    kind: Rule
    services:
    - kind: TraefikService
      name: api@internal
    middlewares:
    - name: secured-whitelist
      namespace: default
  tls:
    secretName: milton-mcf-io-wc-cert
    options:
      name: milton-mcf-io
